--- a/Odoo_mass_payment/views/mass_payment_views.xml
+++ b/Odoo_mass_payment/views/mass_payment_views.xml
@@ -1,4 +1,5 @@
 <odoo>
+<data>
     <record id="view_mass_payment_form" model="ir.ui.view">
         <field name="name">mass.payment.form</field>
         <field name="model">mass.payment</field>
@@ -44,6 +45,5 @@
             </p>
         </field>
     </record>
-
-    <menuitem id="menu_mass_payment" name="Mass Payments" parent="account.menu_action_account_payments_payable" action="action_mass_payment"/>
+</data>
 </odoo>
