--- a/new_module/views/views.xml
+++ b/new_module/views/views.xml
@@ -10,17 +10,17 @@
                         <group>
                             <field name="date"/>
                             <field name="partner_id"/>
-                            <field name="journal_id"/>
                         </group>
                         <notebook>
-                            <page string="Pending Balances">
-                                <field name="payment_line_ids" context="{'default_multi_payment_id': active_id}">
-                                    <tree editable="bottom">
-                                        <field name="move_line_id"/>
-                                        <field name="amount_due" readonly="1"/>
-                                        <field name="amount_paid"/>
-                                    </tree>
-                                </field>
+                            <page string="Debts" invisible="state != 'draft'">
+                                <p>
+                                        Payment will be automatically matched with the oldest lines of this list (by maturity date). You can remove any line you dont want to be matched.
+                                </p>
+                                <!--<button name="add_all" string="Add All / Refresh" invisible="state != 'draft'" type="object"/>
+                                <button name="remove_all" string="Remove All" invisible="state != 'draft'" type="object"/>
+                                <button name="%(action_account_payment_invoice_wizard)d" string="+ Debit Note" invisible="state != 'draft'" type="action" context="{'internal_type': 'debit_note'}"/>
+                                <button name="%(action_account_payment_invoice_wizard)d" string="+ Credit Note" invisible="state != 'draft'" context="{'refund': True}" type="action"/> -->
+                                <field name="to_pay_move_line_ids" readonly="state != 'draft'" context="{'tree_view_ref': 'account_payment_pro.view_move_line_tree'}" domain="[('partner_id.commercial_partner_id', '=', commercial_partner_id),('account_id.reconcile', '=', True),('reconciled', '=', False), ('full_reconcile_id', '=', False), ('company_id', '=', company_id), ('move_id.state', '=', 'posted'), ('account_id.account_type', '=', 'asset_receivable' if partner_type == 'customer' else 'liability_payable')]" help="Payment will be automatically matched with the oldest lines of this list (by maturity date). You can remove any line you dont want to be matched."/>
                             </page>
                         </notebook>
                     </sheet>
